// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YAxis it renders consistently 1`] = `
<div
  className="YAxis"
>
  <svg
    className="YAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="10%"
      y1="10%"
      y2="90%"
    />
    <g
      className="YAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="90%"
          y2="90%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="5%"
          y="90%"
        >
          10
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="50%"
          y2="50%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="5%"
          y="50%"
        >
          20
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="10%"
          y2="10%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="5%"
          y="10%"
        >
          30
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`YAxis it renders consistently with an explicit config 1`] = `
<div
  className="YAxis"
>
  <svg
    className="YAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="10%"
      y1="10%"
      y2="90%"
    />
    <g
      className="YAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="90%"
          y2="90%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="NaN%"
          y="90%"
        >
          10
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="50%"
          y2="50%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="NaN%"
          y="50%"
        >
          20
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="10%"
          y2="10%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="NaN%"
          y="10%"
        >
          30
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`YAxis it renders consistently without a config 1`] = `
<div
  className="YAxis"
>
  <svg
    className="YAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="10%"
      y1="10%"
      y2="90%"
    />
    <g
      className="YAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="90%"
          y2="90%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="5%"
          y="90%"
        >
          10
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="50%"
          y2="50%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="5%"
          y="50%"
        >
          20
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="10%"
          y2="10%"
        />
        <text
          className="YAxis__TickLabels"
          stroke="black"
          x="5%"
          y="10%"
        >
          30
        </text>
      </g>
    </g>
  </svg>
</div>
`;
